--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,10 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
   - title: "CV"
-    url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
+    url: https://Akihisa-Watanabe.github.io/files/cv.pdf
+
+  # - title: "Publications"
+  #   url: /publications/
+
+  - title: "日本語"
+    url: /japanese/
