--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Akihisa Watanabe"
 title_separator          : "-"
 name                     : &name "Akihisa Watanabe"
-description              : &description "3rd year B.A Student at Waseda University"
+description              : &description "3rd year B.A student at Waseda University"
 url                      : https://akihisa-watanabe.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "Akihisa-Watanabe.github.io"
